@startuml

rectangle theme {
    class Theme
    abstract class LWindow
    abstract class LWindowManager
    Theme *-- LWindow
    Theme *-- LWindowManager
}

rectangle graphics {
    abstract class Graphics
    abstract class GWindowManager
    abstract class GWindow
    abstract class Resources
    class GrabManager
    class FocusManager

    LWindowManager <|-- GWindowManager
    LWindow <|-- GWindow

    GWindowManager *-left- GrabManager
    GWindowManager *-- FocusManager
    GWindowManager *-- Resources

    GWindow -left-> GWindowManager

    Graphics -left-> GWindowManager : create
}

rectangle x11 {
    class X
    class XWindowManager
    class XWindow
    class XResources

    Graphics <|-- X
    GWindowManager <|-- XWindowManager
    GWindow <|-- XWindow
    Resources <|-- XResources
}

@enduml